Alignment Changes Fixed

--- a/diyamVersion2/BI.css
+++ b/diyamVersion2/BI.css
@@ -3,8 +3,9 @@
 }
 
 .container{
-	
-	Padding-top:40px;
+	width:100%;
+	padding:0px;
+	margin:0px;
 }
 
 body{
@@ -121,5 +122,5 @@ button:hover {
 	float:left;
 	padding-left:80px;
 	padding-top:40px;
-	border:5px solid red;
+	border:0px solid red;
 }
