--- a/diyamVersion2/Portfolio.css
+++ b/diyamVersion2/Portfolio.css
@@ -3,8 +3,8 @@
 }
 
 .container{
-	
-	Padding:0px;
+	width:100%;
+	padding:0px;
 	margin:0px;
 }
 
@@ -97,11 +97,10 @@ button:hover {
 	padding-left:15%;
 	text-align:left;
 }
-.content{
+#content{
 	
 	padding:0;
-	margin:0;
-	margin-left:12%;
+	margin:0px;
 	border:0px solid red;
 	align:center;
 }
