--- a/diyamVersion2/spm.css
+++ b/diyamVersion2/spm.css
@@ -4,7 +4,7 @@
 
 .container{
 	
-	Padding:0px;
+	padding:0px;
 	margin:0px;
 	
 }
@@ -26,10 +26,9 @@ body{
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 250px;	
-  margin-top:40px;
+ 
   text-align: center;
-  font-family: arial;
+ 
   padding-top:30px;
   padding-left:40px;
   padding-right:40px;
@@ -109,17 +108,12 @@ button:hover {
 .titleheader{
 	background-color: #0068d0;
 	color:white ! important;
-	width:1000%;
-	height:40%;
-	float:left;
-	padding-left:80px;
-	padding-top:30px;
+	width:100%;
 }
 
-.content{
-	
+#content{	
 	padding:0;
-	margin-top:10%;
+	margin-top:5%;
 	margin-left:12%;
 	border:0px solid red;
 }
